--- a/소프트웨어공학/애자일 개발 모델.md
+++ b/소프트웨어공학/애자일 개발 모델.md
@@ -1,6 +1,12 @@
 # 애자일 개발 모델(애자일 개발 프로세스)
 > Agile : 날렵한, 민첩한, 재빠른
 - less document-oriented, 즉 문서를 통한 개발방법이 아닌 실질적인 코딩을 바탕으로 한 개발 방법론이다.
+- 매 개발 주기마다 기획/분석, 디자인, 개발, 테스트를 거친 후 검토 회의를 통해 생산된 프로토타입으로 고객의 피드백을 받는다.
+- 이 때의 개발 주기를 스프린트 라고 한다. 스프린트(매 주기)를 거치면서 점차 결과물은 누적되어 커진다.
+<img src="https://user-images.githubusercontent.com/99185757/193205677-18c8b2bb-0a39-4d44-92ed-fff5113c1b95.jpeg">
 
+## 스프린트
+> Sprint : 전력 질주하다
+- 반복적인 개발 주기를 의미한다.
+- ex) 5일 안에 5개의 코딩테스트 문제를 풀어 총 50개의 문제를 푼다고 가정하자. 이 때 5일은 스프린트 즉, 반복적인 작업의 주기가 된다.
 
-## 
