Update 애자일 개발 모델.md

--- a/소프트웨어공학/애자일 개발 모델.md
+++ b/소프트웨어공학/애자일 개발 모델.md
@@ -1,12 +1,32 @@
 # 애자일 개발 모델(애자일 개발 프로세스)
 > Agile : 날렵한, 민첩한, 재빠른
 - less document-oriented, 즉 문서를 통한 개발방법이 아닌 실질적인 코딩을 바탕으로 한 개발 방법론이다.
-- 매 개발 주기마다 기획/분석, 디자인, 개발, 테스트를 거친 후 검토 회의를 통해 생산된 프로토타입으로 고객의 피드백을 받는다.
+- `매 개발 주기마다 기획/분석, 디자인, 개발, 테스트를 거친 후 검토 회의를 통해 생산된 프로토타입으로 고객의 피드백을 받는다.`
 - 이 때의 개발 주기를 스프린트 라고 한다. 스프린트(매 주기)를 거치면서 점차 결과물은 누적되어 커진다.
-<img src="https://user-images.githubusercontent.com/99185757/193205677-18c8b2bb-0a39-4d44-92ed-fff5113c1b95.jpeg">
+
+<p align="center">
+<img src="https://user-images.githubusercontent.com/99185757/193211691-9303134a-6b93-418e-82fb-05c62234bdb7.jpeg" title="출처-https://url.kr/tvb9mz">
+</p>
 
 ## 스프린트
 > Sprint : 전력 질주하다
-- 반복적인 개발 주기를 의미한다.
+- `반복적인 개발 주기`를 의미한다.
 - ex) 5일 안에 5개의 코딩테스트 문제를 풀어 총 50개의 문제를 푼다고 가정하자. 이 때 5일은 스프린트 즉, 반복적인 작업의 주기가 된다.
+- 스프린트기간 내에는 매일 스크럼 회의를 통해 팀원들과 진행상황을 공유한다.
 
+<p align="center">
+<img src="https://user-images.githubusercontent.com/99185757/193214742-628e4162-a131-4859-9fc1-54e48e48ba79.jpeg" title="출처-https://huisam.tistory.com/entry/Agile">
+</p>
+
+## 스크럼
+> Scrum : 럭비 경기에서 반칙으로 인해 경기가 중단되었을 때 양 팀의 7-8명이 뭉쳐 상대팀을 앞으로 밀치는 대형을 의미하는데, 개발에서는 팀이라는 단어를 중점으로 따와 효율적인 성과를 얻기 위한 대형을 의미한다.
+- 즉, `스프린트 기간에 이루어지는 팀원들과의 짧은 회의`이다.
+- 데일리 스크럼 진행 시 지켜야할 규칙들이 존재한다.
+    - 최대 15분 이내로 회의를 마친다.
+    - 서서 진행한다. -> 하지만 꼭 서서하지는 않아도 된다.😅
+    - 팀원들이 돌아가면서 아래의 질문에 답을 한다.
+      - 지난 데일리 스크럼부터 지금까지 내가 완수한 것이 무엇인가?
+      - 다음 데일리 스크럼까지 내가 해야할 것은 무엇인가?
+      - 현재 문제가 되는 작업이 무엇인가?(곤란하거나 문제점)
+- 데일리 스크럼의 필요성
+  - 진행하는 `프로젝트가 불확실할 경우 데일리 스크럼을 통하여 매일매일 상태를 업데이트하고 조율`하여 프로젝트에 대한 이해도 및 확실성을 높인다.
