[MODIFY] 디자인패턴 - 팩토리 패턴 추가

--- a/소프트웨어공학/디자인패턴.md
+++ b/소프트웨어공학/디자인패턴.md
@@ -56,4 +56,55 @@ console.log(a === b)    //true
 - 메인 모듈에서 DB 연결에 관한 인스턴스를 정의하고 다른 모듈들에서 해당 인스턴스를 기반으로 쿼리를 보내는 형식.
 > 💡 기존에 app.module.ts에서 작성했던 것 처럼 인스턴스를 생성하여 해당 인스턴스를 통해 쿼리를 작성하여 작업하는 것과 동일하다!
 
+## 팩토리 패턴(Factory Pattern)
+- 상속관계인 두 클래스의 상위 클래스가 뼈대역할을 하고 하위 클래스가 객체 생성에 대한 구체적인 내용을 결정하는 패턴이다.
 
+### 장점
+- 상위 / 하위 클래스의 분리로 느슨한 결합을 가지고 상위 클래스는 인스턴스 생성 방식에 대해 알 필요가 없기 때문에 더 많은 유연성을 갖는다.
+- 객체 생성 로직이 따로 떨어져 있어 리팩토링 시에 좀 더 수월하다.(한 곳만 고치면 된다.)
+
+### 예시
+```javascript
+class CheeseCake {
+  constructor() {
+    this.name = "CheeseCake"
+  }
+}
+
+class StrawberryCake {
+  constructor() {
+    this.name = "StrawberryCake"
+  }
+}
+
+class CheeseCakeFactory {             //하위 클래스
+  static createCake() {
+    return new CheeseCake()
+  }
+}
+
+class StrawberryCakeFactory {         //하위 클래스
+  static createCake() {
+    return new StrawberryCake()
+  }
+}
+
+const factoryList = {CheeseCakeFactory, StrawberryCakeFactory}
+
+class CakeFactory {                   //상위 클래스
+  static createCake(cake) {
+    const factory = factoryList[cake]
+    return factory.createCake()
+  }
+}
+
+const main = () => {
+  const cake = CakeFactory.createCake("CheeseCakeFactory")
+
+  console.log(cake.name)            //CheeseCake
+}
+
+main()
+```
+위와 같이 상위 클래스인 CakeFactory는 뼈대역할을 하고 하위 클래스인 CheeseCakeFactory에서 구체적인 내용을 수행한다. 하위 클래스에서 인스턴스를 생성하여 상위 클래스에 주입을 하므로 의존성 주입이라고 볼 수 있다.
+> 💡 static : CakeFactory와 같이 static으로 메소드를 정의하면 클래스의 인스턴스 없이 호출이 가능하여 메모리를 절약할 수 있고 개별 인스턴스에 묶이지 않고 클래스 내의 함수를 정의할 수 있다는 장점이 있다.
