--- a/소프트웨어공학/디자인패턴.md
+++ b/소프트웨어공학/디자인패턴.md
@@ -11,7 +11,13 @@
 
 # 디자인 패턴
 - 프로그램 설계 시 자주 발생한 문제점들을 객체 간의 상호 관계 등을 이용하여 해결할 수 있도록 하나의 규약 형태로 만들어 놓은 것.
-- 쉽게 말해, 문제가 발생하였을 떄 재사용할 수 있는 해결책이다.
+- 쉽게 말해, 문제가 발생하였을 떄 재사용할 수 있는 해결책으로써 설계 과정의 속도를 높일 수 있다.
+
+## 디자인 패턴 구조
+- 콘텍스트(Context), 문제(Problem), 해결(Solution) 3가지 요소
+  - Context : 문제가 발생하는 여러 상황을 기술한다. 패턴이 적용될 수 있는 상황을 나타낸다.
+  - Problem : 패턴이 적용되어 해결될 필요가 있는 여러 디자인 이슈들을 기술한다.
+  - Solution : 문제를 해결하도록 설계를 구성하는 요소들과 그 요소들 사이의 관계, 책임, 협력 관계를 기술한다. 다양한 상황에 적용할 수 있는 일종의 템플릿이다.
 <br>
 
 ## 싱글톤 패턴(Singleton Pattern)
@@ -110,3 +116,13 @@ main()
 ```
 위와 같이 상위 클래스인 CakeFactory는 뼈대역할을 하고 하위 클래스인 CheeseCakeFactory에서 구체적인 내용을 수행한다. 하위 클래스에서 인스턴스를 생성하여 상위 클래스에 주입을 하므로 의존성 주입이라고 볼 수 있다.
 > 💡 static : CakeFactory와 같이 static으로 메소드를 정의하면 클래스의 인스턴스 없이 호출이 가능하여 메모리를 절약할 수 있고 개별 인스턴스에 묶이지 않고 클래스 내의 함수를 정의할 수 있다는 장점이 있다.
+<br>
+
+## 전략 패턴(Strategy Pattern)
+- 객체의 행위를 수정하고 싶을 경우 직접 수정하지 않고 `캡슐화한 알고리즘`을 Context안에서 바꿔주면서 상호 교체가 가능하도록 만든다.
+> 💡 Context : 프로그래밍에서의 context는 상황, 맥락, 문맥을 의미하며 개발자가 어떠한 작업을 완료하는 데 필요한 모든 관련 정보를 말한다.
+
+### Passport 전략 패턴
+- Passport는 전략 패턴을 활용한 라이브러리로 Node.js에서 인증 모듈을 구현할 떄 쓰는 미들웨어 라이브러리이다.
+- 서비스 내의 회원정보를 기반으로 한 LocalStrategy와 네이버, 카카오, 구글 등의 다른 서비스를 기반으로 인증하는 OAuth 전략 등을 지원한다.
+> 💡 OAuth : 인터넷 사용자들이 비밀번호를 제공하지 않고 다른 웹사이트 상의 자신들의 정보에 대해 웹사이트나 애플리케이션의 접근 권한을 부여할 수 있는 공통적인 수단으로서 사용하는 접근 위임을 위한 개방형 표준
