[MODIFY] 디자인 패턴 - 전략 패턴 예시 추가

--- a/소프트웨어공학/디자인패턴.md
+++ b/소프트웨어공학/디자인패턴.md
@@ -126,3 +126,29 @@ main()
 - Passport는 전략 패턴을 활용한 라이브러리로 Node.js에서 인증 모듈을 구현할 떄 쓰는 미들웨어 라이브러리이다.
 - 서비스 내의 회원정보를 기반으로 한 LocalStrategy와 네이버, 카카오, 구글 등의 다른 서비스를 기반으로 인증하는 OAuth 전략 등을 지원한다.
 > 💡 OAuth : 인터넷 사용자들이 비밀번호를 제공하지 않고 다른 웹사이트 상의 자신들의 정보에 대해 웹사이트나 애플리케이션의 접근 권한을 부여할 수 있는 공통적인 수단으로서 사용하는 접근 위임을 위한 개방형 표준
+
+### 예시
+- 다음은 프로젝트 때 Node.js로 Google Strategy를 사용하여 구글 로그인을 구현했던 코드이다.
+```javascript
+import { PassportStrategy } from '@nestjs/passport';
+import { Strategy } from 'passport-google-oauth20';
+
+export class JwtGoogleStrategy extends PassportStrategy(Strategy, 'google') {
+  constructor() {
+    super({
+      clientID: process.env.GOOGLE_CLIENT_ID,
+      clientSecret: process.env.GOOGLE_CLIENT_SECRET,
+      callbackURL: process.env.GOOGLE_CALLBACK_URL,
+      scope: ['email', 'profile'],
+    });
+  }
+
+  validate(accessToken, refreshToken, profile) {    //구글 로그인 인증이 완료되었을 경우 진입. 올바른 계정정보가 아닐 경우 진입 불가.
+    return {
+      email: profile.emails[0].value,
+      password: 'socialLogin',
+      nickName: profile.displayName,
+    };
+  }
+}
+```
