--- a/소프트웨어공학/디자인패턴.md
+++ b/소프트웨어공학/디자인패턴.md
@@ -1,154 +1,249 @@
 들어가기 전에..
+
 > 💡 라이브러리란?
+>
 > - 공통으로 사용될 수 있는 특정 기능들을 모듈화한 것.
 > - 폴더명, 파일명 등에 대한 규칙이 없고 프레임워크보다 자유롭다.
 > - 내가 직접 컨트롤 해야한다.(내가 여러개의 표준을 만들어야한다.)
 
 > 💡 프레임워크란?
+>
 > - 공통으로 사용될 수 있는 특정 기능들을 모듈화한 것.
 > - 폴더명, 파일명 등에 대한 규칙이 있고 라이브러리보다 엄격하다.
 > - 내가 직접 컨트롤하지 않는다.(내가 여러개의 표준을 만들 필요가 없다. 프레임워크가 지원해준다.)
 
 # 디자인 패턴
+
 - 프로그램 설계 시 자주 발생한 문제점들을 객체 간의 상호 관계 등을 이용하여 해결할 수 있도록 하나의 규약 형태로 만들어 놓은 것.
 - 쉽게 말해, 문제가 발생하였을 떄 재사용할 수 있는 해결책으로써 설계 과정의 속도를 높일 수 있다.
 
 ## 디자인 패턴 구조
+
 - 콘텍스트(Context), 문제(Problem), 해결(Solution) 3가지 요소
   - Context : 문제가 발생하는 여러 상황을 기술한다. 패턴이 적용될 수 있는 상황을 나타낸다.
   - Problem : 패턴이 적용되어 해결될 필요가 있는 여러 디자인 이슈들을 기술한다.
   - Solution : 문제를 해결하도록 설계를 구성하는 요소들과 그 요소들 사이의 관계, 책임, 협력 관계를 기술한다. 다양한 상황에 적용할 수 있는 일종의 템플릿이다.
-<br>
+    <br>
 
 ## 싱글톤 패턴(Singleton Pattern)
+
 - 하나의 클래스에 하나의 인스턴스만 가지는 패턴.
 - 보통 DB연결 모듈에 많이 사용한다.
 
 ### 장점
+
 - 하나의 인스턴스를 다른 모듈들이 공유하며 사용할 수 있어 인스턴스 생성 비용이 줄어든다.
 
 ### 단점
+
 - 하나의 인스턴스를 공유하다보니 의존성이 높아진다.
   - DI(Dependency Injection, 의존성 주입)를 통해 모듈 간의 결합을 느슨하게 만들어 해결할 수 있다.
 - TDD(Test Driven Development)를 할 때 단위테스트는 테스트가 독립적이어야 하고 어떤 순서로든 실행이 가능해야 한다. 하지만 싱글톤 패턴은 하나의 인스턴스를 공유하므로 독립적인 인스턴스를 만들기 어렵다.
 
 ### 예시
+
 ```javascript
 //싱글톤 X : 서로 다른 인스턴스를 갖는다.
-const obj = { a: 27 }
-const obj2 = { b: 35 }
+const obj = { a: 27 };
+const obj2 = { b: 35 };
 
-console.log(obj === obj2)		//false
+console.log(obj === obj2); //false
 
 //싱글톤 O : 같은 인스턴스를 갖는다.
-class Singleton{
+class Singleton {
   constructor(a) {
-    if(!Singleton.instance) {   //Singleton클래스의 인스턴스가 정의가 되어있지 않을 경우 this를 통해 클래스가 인스턴스화 된 그 인스턴스를 Singleton의 instance로 지정한다.
-      Singleton.instance = this
+    if (!Singleton.instance) {
+      //Singleton클래스의 인스턴스가 정의가 되어있지 않을 경우 this를 통해 클래스가 인스턴스화 된 그 인스턴스를 Singleton의 instance로 지정한다.
+      Singleton.instance = this;
     }
-    return Singleton.instance
+    return Singleton.instance;
   }
 
   getInstance() {
-    return this.instance
+    return this.instance;
   }
 }
 
-const a = new Singleton('a')
-const b = new Singleton('b')
+const a = new Singleton("a");
+const b = new Singleton("b");
 
-console.log(a === b)    //true
+console.log(a === b); //true
 ```
+
 ### DB연결에서의 싱글톤 패턴
+
 - 메인 모듈에서 DB 연결에 관한 인스턴스를 정의하고 다른 모듈들에서 해당 인스턴스를 기반으로 쿼리를 보내는 형식.
-> 💡 기존에 app.module.ts에서 작성했던 것 처럼 인스턴스를 생성하여 해당 인스턴스를 통해 쿼리를 작성하여 작업하는 것과 동일하다!
-<br>
+  > 💡 기존에 app.module.ts에서 작성했던 것 처럼 인스턴스를 생성하여 해당 인스턴스를 통해 쿼리를 작성하여 작업하는 것과 동일하다!
+  > <br>
 
 ## 팩토리 패턴(Factory Pattern)
+
 - 상속관계인 두 클래스의 상위 클래스가 뼈대역할을 하고 하위 클래스가 객체 생성에 대한 구체적인 내용을 결정하는 패턴이다.
 
 ### 장점
+
 - 상위 / 하위 클래스의 분리로 느슨한 결합을 가지고 상위 클래스는 인스턴스 생성 방식에 대해 알 필요가 없기 때문에 더 많은 유연성을 갖는다.
 - 객체 생성 로직이 따로 떨어져 있어 리팩토링 시에 좀 더 수월하다.(한 곳만 고치면 된다.)
 
 ### 예시
+
 ```javascript
 class CheeseCake {
   constructor() {
-    this.name = "CheeseCake"
+    this.name = "CheeseCake";
   }
 }
 
 class StrawberryCake {
   constructor() {
-    this.name = "StrawberryCake"
+    this.name = "StrawberryCake";
   }
 }
 
-class CheeseCakeFactory {             //하위 클래스
+class CheeseCakeFactory {
+  //하위 클래스
   static createCake() {
-    return new CheeseCake()
+    return new CheeseCake();
   }
 }
 
-class StrawberryCakeFactory {         //하위 클래스
+class StrawberryCakeFactory {
+  //하위 클래스
   static createCake() {
-    return new StrawberryCake()
+    return new StrawberryCake();
   }
 }
 
-const factoryList = {CheeseCakeFactory, StrawberryCakeFactory}
+const factoryList = { CheeseCakeFactory, StrawberryCakeFactory };
 
-class CakeFactory {                   //상위 클래스
+class CakeFactory {
+  //상위 클래스
   static createCake(cake) {
-    const factory = factoryList[cake]
-    return factory.createCake()
+    const factory = factoryList[cake];
+    return factory.createCake();
   }
 }
 
 const main = () => {
-  const cake = CakeFactory.createCake("CheeseCakeFactory")
+  const cake = CakeFactory.createCake("CheeseCakeFactory");
 
-  console.log(cake.name)            //CheeseCake
-}
+  console.log(cake.name); //CheeseCake
+};
 
-main()
+main();
 ```
+
 위와 같이 상위 클래스인 CakeFactory는 뼈대역할을 하고 하위 클래스인 CheeseCakeFactory에서 구체적인 내용을 수행한다. 하위 클래스에서 인스턴스를 생성하여 상위 클래스에 주입을 하므로 의존성 주입이라고 볼 수 있다.
+
 > 💡 static : CakeFactory와 같이 static으로 메소드를 정의하면 클래스의 인스턴스 없이 호출이 가능하여 메모리를 절약할 수 있고 개별 인스턴스에 묶이지 않고 클래스 내의 함수를 정의할 수 있다는 장점이 있다.
-<br>
+> <br>
 
 ## 전략 패턴(Strategy Pattern)
+
 - 객체의 행위를 수정하고 싶을 경우 직접 수정하지 않고 `캡슐화한 알고리즘`을 Context안에서 바꿔주면서 상호 교체가 가능하도록 만든다.
-> 💡 Context : 프로그래밍에서의 context는 상황, 맥락, 문맥을 의미하며 개발자가 어떠한 작업을 완료하는 데 필요한 모든 관련 정보를 말한다.
+  > 💡 Context : 프로그래밍에서의 context는 상황, 맥락, 문맥을 의미하며 개발자가 어떠한 작업을 완료하는 데 필요한 모든 관련 정보를 말한다.
 
 ### Passport 전략 패턴
+
 - Passport는 전략 패턴을 활용한 라이브러리로 Node.js에서 인증 모듈을 구현할 떄 쓰는 미들웨어 라이브러리이다.
 - 서비스 내의 회원정보를 기반으로 한 LocalStrategy와 네이버, 카카오, 구글 등의 다른 서비스를 기반으로 인증하는 OAuth 전략 등을 지원한다.
-> 💡 OAuth : 인터넷 사용자들이 비밀번호를 제공하지 않고 다른 웹사이트 상의 자신들의 정보에 대해 웹사이트나 애플리케이션의 접근 권한을 부여할 수 있는 공통적인 수단으로서 사용하는 접근 위임을 위한 개방형 표준
+  > 💡 OAuth : 인터넷 사용자들이 비밀번호를 제공하지 않고 다른 웹사이트 상의 자신들의 정보에 대해 웹사이트나 애플리케이션의 접근 권한을 부여할 수 있는 공통적인 수단으로서 사용하는 접근 위임을 위한 개방형 표준
 
 ### 예시
-- 다음은 프로젝트 때 Node.js로 Google Strategy를 사용하여 구글 로그인을 구현했던 코드이다.
-```javascript
-import { PassportStrategy } from '@nestjs/passport';
-import { Strategy } from 'passport-google-oauth20';
 
-export class JwtGoogleStrategy extends PassportStrategy(Strategy, 'google') {
+- 다음은 프로젝트 때 Node.js로 Google Strategy를 사용하여 구글 로그인을 구현했던 코드이다.
+
+```javascript
+import { PassportStrategy } from "@nestjs/passport";
+import { Strategy } from "passport-google-oauth20";
+
+export class JwtGoogleStrategy extends PassportStrategy(Strategy, "google") {
   constructor() {
     super({
       clientID: process.env.GOOGLE_CLIENT_ID,
       clientSecret: process.env.GOOGLE_CLIENT_SECRET,
       callbackURL: process.env.GOOGLE_CALLBACK_URL,
-      scope: ['email', 'profile'],
+      scope: ["email", "profile"],
     });
   }
 
-  validate(accessToken, refreshToken, profile) {    //구글 로그인 인증이 완료되었을 경우 진입. 올바른 계정정보가 아닐 경우 진입 불가.
+  validate(accessToken, refreshToken, profile) {
+    //구글 로그인 인증이 완료되었을 경우 진입. 올바른 계정정보가 아닐 경우 진입 불가.
     return {
       email: profile.emails[0].value,
-      password: 'socialLogin',
+      password: "socialLogin",
       nickName: profile.displayName,
     };
   }
 }
+```
+
+<br>
+
+## 퍼사드 패턴(Facade Pattern)
+
+- 공통적인 기능을 정의하는 여러 서브 시스템들을 단순화된 상위 수준의 인터페이스로 정의하는 패턴이다.
+- 서브시스템들 사이의 종속성을 줄일 수 있다.
+- 복잡한 소프트웨어를 사용할 수 있게 간단한 인터페이스를 제공한다.
+  > 💡인터페이스(Interface)
+  > : 외부(다른 객체)에서 접근 가능한 멤버의 집합 => `호출 가능한 메소드 집합(interface)`
+- 다음은 우리가 인스턴트 커피를 만들 때 필요한 서브시스템들과 서브시스템의 인터페이스 집합인 상위 수준의 인터페이스(makeOneCoffee)에 대한 예이다.
+
+```javascript
+//서브 시스템 : 물과 관련된 클래스이다.
+class Water {
+  boil() {
+    //물 끓이기
+    console.log("boil water");
+  }
+}
+
+//서브 시스템 : 커피와 관련된 클래스
+class Coffee {
+  constructor(name) {
+    this.name = name;
+  }
+
+  add() {
+    //커피 추가하기
+    console.log(`add ${this.name} coffee`);
+  }
+}
+
+//서브 시스템 : 숟가락과 관련된 클래스
+class Spoon {
+  stir() {
+    //숟가락으로 젓기
+    console.log(`stir spoon`);
+  }
+}
+
+//퍼사드
+class MakeCoffee {
+  constructor(name) {
+    this.name = name;
+  }
+
+  makeOneCoffee() {
+    //커피 한 컵 만들기 : 복잡한 서브 클래스들에 대한 인스턴스를 가지며 복잡한 호출 방식에 대하여 makeOneCoffee() 메소드 내에서 구현됨
+    const water = new Water();
+    const coffee = new Coffee(this.name);
+    const spoon = new Spoon();
+
+    water.boil();
+    coffee.add();
+    spoon.stir();
+  }
+}
+
+//Client => 사용자는 내부의 복잡한 서브 시스템에 대하여 알 필요가 없다. 상위 수준의 인터페이스를 통해 간단하게 복잡한 기능을 수행할 수 있다.
+const makeCoffee = new MakeCoffee("maxim");
+makeCoffee.makeOneCoffee();
+```
+
+```javascript
+/* 결과물 */
+boil water
+add maxim coffee
+stir spoon
 ```
